* Internals:
  - Multithreaded Job Queue preparing multicore support (#1103)
  - Rewrite code handling external processes/jobs (#1100)
  - Music (pre)views could previously only display PDF documents; this has been
    rewritten so that many more formats can be displayed like SVG and images,
    which will open up new possibilities for the music view and the manuscript
    viewer (#1202)
* Translations:
  - Userguide now has its own PO files. PO files for userguide and Frescobaldi
    both are in 'i18n/xx_CC' directories, see README-translations
  - updated nl translation by Wilbert Berendsen


Changes in 3.0.0 -- February 17th, 2017

* Requirement changes:
  - Frescobaldi now requires Python3.2+, Qt5, PyQt5, python-poppler-qt5

* New features:
  - Zoom with pinch gesture in Music View, contributed by David Rydh
  - An option (enabled by default) to move the cursor to the end of the line
    when PageDown is pressed on the last line, and to move the cursor to the
    start of the first line if PageUp is pressed on the first line
* Improvements:
  - Retina display support in Music View, contributed by David Rydh


Changes in 2.20.0 -- February 17th, 2017

* New features:
  - New Manuscript viewer tool, displaying an "engraver's copy",
    contributed by Peter Bjuhr and Urs Liska
  - Copy selected text in Music View
  - New command Edit->Move to include file...
  - New quick remove actions to remove beams and ligatures from selected music
  - Search tool in the keyboard shortcuts preferences page (#690)
* Improvements:
  - Fit Width in Music View now fits two pages in width, if in two-page mode
  - the Music View now remembers the page layout mode
  - Jump to next or previous bookmark now respects surrounding lines setting
  - Better default save path, looking at last edited document (#162)
* Bug fixes:
  - fix #716 position of open document tab bar changes on engrave
  - Midi input fixes by David Rydh:
    * fix #797 and #853, now honour Midi input port setting